Time: 17 ms (73.17%), Space: 43.8 MB (79.1%) - LeetHub